--- a/src/app/task/task.component.scss
+++ b/src/app/task/task.component.scss
@@ -18,3 +18,8 @@ ion-item {
     text-decoration: line-through;
     transition: 0.25s ease-in;
 }
+
+ion-input {
+    background-color: #fff;;
+    --ion-background-color: #fff;
+}
