--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@ ion-card {
     position: absolute;
     left: 0;
     right: 0;
-    top: 30px;
+    top: 64px;
     margin: auto;
     transition: 0.5s ease-in-out;
 
@@ -24,6 +24,9 @@ ion-card-title {
     text-align: center;
     margin-bottom: 20px;
     font-size: 40px;
+    display: flex;
+    justify-items: center;
+    justify-content: space-between;
 }
 
 ion-content {
@@ -37,4 +40,27 @@ ion-content {
         border-right: 5px solid #333;
         transition: 0.5s ease-in-out;
     }
+}
+
+ion-label {
+    margin-left: 8px;
+}
+
+ion-chip {
+    margin-right: 20px;
+}
+
+ion-icon {
+    margin-left: 8px;
+}
+
+#google-button {
+    padding: 0;
+    margin: 10px;
+    cursor: pointer;
+}
+
+#google-button-container {
+    display: flex;
+    justify-content: space-around;
 }
