--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,6 +1,6 @@
 <div *ngIf='task' id='item-container'>
     <ion-item>
-        <ion-checkbox slot='start' [(ngModel)]='task.completed'></ion-checkbox>
+        <ion-checkbox slot='start' [(ngModel)]='task.completed' (ngModelChange)='update()'></ion-checkbox>
         <ion-label [class.complete]='task.completed'>{{ task.name }}</ion-label>
     </ion-item>
     <ion-button slot='end' color='danger' (click)='delete()'>
