--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,5 +1,10 @@
-<ion-card *ngIf='!(auth.signedInUser$ | async)'>
+<ion-card>
     <ion-card-content id='google-button-container'>
         <img id='google-button' src='../assets/btn_google_signin_light_normal_web.png' (click)='signInWithGoogle()'>
     </ion-card-content>
+    <ng-template #loading>
+        <ion-card-content>
+            <ion-spinner></ion-spinner>
+        </ion-card-content>
+    </ng-template>
 </ion-card>
